# sistema-gestion-pollos

./: admin.html  index.html  package-lock.json  package.json  vite.config.ts
composables/: useSheets.js
src/: AdminApp.vue  App.vue  admin-main.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth_commands.rs  drive_commands.rs  lib.rs
src/assets/: styles.css
src/components/: SyncIcon.vue
src/composables/: useDrive.ts  useNotify.ts  useSheets.js
